<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">Delete this alarm?</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Alarm Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string-array name="timer_notifications">
        <item>Less than a minute remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> remaining</item>
        <item><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> <xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
    </string-array>
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Choose a clock</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="help">help</string>
    <string name="settings">Settings</string>
    <string name="snooze_duration_title">Snooze length</string>
    <plurals name="snooze_duration">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="snooze_picker_label">
        
        <item quantity="one">minute</item>
        
        <item quantity="other">minutes</item>
    </plurals>
    <string name="auto_silence_title">Silence after</string>
    <string name="auto_silence_summary"><xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="auto_silence_never">Never</string>
    <string-array name="auto_silence_entries">
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>30 minutes</item>
      <item>Never</item>
      </string-array>
    <string-array name="auto_silence_values" translatable="false">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
      <item>-1</item> 
      </string-array>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Touch to cancel.</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string-array name="volume_button_setting_entries">
      <item>Snooze</item>
      <item>Dismiss</item>
      <item>Do nothing</item>
      </string-array>
    <string-array name="volume_button_setting_values" translatable="false">
      <item>1</item>
      <item>2</item>
      <item>0</item>
    </string-array>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock display</string>
    <string name="label_description">Label</string>
    <string name="ringtone_description">Ringtone</string>
    <string name="battery_charging_level"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="weather_fetch_failure">Weather information isn\'t available right now.</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="loading_ringtone">Loading ringtone\u2026</string>
    <string name="timer_ring_service_desc">Sound playback service for timers set in Clock.</string>
    <string name="control_set_alarm">Set alarm</string>
    <string name="control_set_alarm_with_existing"><xliff:g id="time">%s</xliff:g></string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="button_alarms">Alarms</string>
    <string name="button_cities">Cities</string>
    <string name="button_menu">More options</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_night_mode">Night mode</string>
    <string name="sw_resume_button">Resume</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_stop_button">Stop</string>
    <string name="sw_lap_button">Lap</string>
    <string name="sw_reset_button">Reset</string>
    <string name="sw_share_button">Share</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="zero">0</string>
    <string name="sw_share_main">My time is <xliff:g id="time">%s</xliff:g></string>
    <string name="sw_share_laps">Lap times:</string>
    <string name="sw_notification_lap_number">Lap <xliff:g id="number">%d</xliff:g></string>
    <plurals name="Nhours_description">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Nminutes_description">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nseconds_description">
        
        <item quantity="one">1 second</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> seconds</item>
    </plurals>
    <string name="timer_add_timer">Add Timer</string>
    <string name="timer_start">Start</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_cancel">Cancel</string>
    <string name="timer_times_up">Time\'s up</string>
    <string name="timer_notification_label">Timer</string>
    <string-array name="sw_share_strings" translatable="true">
        <item>You\'re quite the speed demon.</item>
        <item>Enjoy the fruits of your labor.</item>
        <item>Androids are known to be fast, but not as fast as you!</item>
        <item>Phew.</item>
        <item>L33t times.</item>
        <item>Such prodigious velocity.</item>
        <item>Let\'s do the time warp again.</item>
        <item>Just a jump to the left.</item>
        <item>You have a palette for haste.</item>
        <item>Photonic velocity.</item>
    </string-array>
    <plurals name="timers_num">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> timers</item>
    </plurals>
    <string name="home_label">Home</string>
    <string name="cities_activity_title">Cities</string>
    <string name="alarm_on">ON</string>
    <string name="alarm_off">OFF</string>
    <string name="clock_settings">CLOCK</string>
    <string name="clock_style">Style</string>
    <string-array name="clock_style_entries">
      <item>Analog</item>
      <item>Digital</item>
    </string-array>
    <string-array name="clock_style_values" translatable="false">
      <item>analog</item>
      <item>digital</item>
    </string-array>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="time_picker_set">OK</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
     <string name="alarm_settings">ALARMS</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Very dim display (for dark rooms)</string>
    <string name="widget_12_hours_format_h" translatable="false">h</string>
    <string name="widget_12_hours_format_no_ampm_m" translatable="false">:mm</string>
    <string name="widget_12_hours_format_m" translatable="false">:mm<font size="15">aa</font></string>
    <string name="widget_24_hours_format_h" translatable="false">kk</string>
    <string name="widget_24_hours_format_m" translatable="false">:mm</string>
</resources>