<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_label">
    <ListPreference
        android:key="screensaver_clock_style"
        android:title="@string/clock_style"
        android:entries="@array/clock_style_entries"
        android:entryValues="@array/clock_style_values"
        android:defaultValue="@string/default_clock_style"
        android:dialogTitle="@string/clock_style" />
    <CheckBoxPreference
        android:key="screensaver_night_mode"
        android:title="@string/night_mode_title"
        android:summary="@string/night_mode_summary"
        android:defaultValue="false" />
</PreferenceScreen>
