<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.android.deskclock.timer.TimerView
            android:id="@+id/timer_time_text"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_font_padding"
            android:paddingBottom="@dimen/medium_font_padding"
            android:paddingLeft="@dimen/timer_padding_left"
            android:layout_gravity="center"
            android:gravity="top"
            android:baselineAligned="false">
            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/hours_ones"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/medium_bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/hours_label"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/label"
                android:layout_gravity="top"
                android:contentDescription="@string/hours_label_description"
                android:text="@string/hours_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/minutes_tens"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/medium_bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/minutes_ones"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/medium_bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>
            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/minutes_label"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/label"
                android:contentDescription="@string/minutes_label_description"
                android:text="@string/minutes_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/seconds"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/medium_light"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

            <com.android.deskclock.ZeroTopPaddingTextView
                android:id="@+id/seconds_label"
                android:singleLine="true"
                android:ellipsize="none"
                style="@style/label"
                android:layout_gravity="top"
                android:contentDescription="@string/seconds_label_description"
                android:text="@string/seconds_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/clock_white"/>

        </com.android.deskclock.timer.TimerView>
        <ImageButton
            android:id="@+id/delete"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/body_font_padding"
            android:src="@drawable/ic_backspace"
            android:background="@drawable/item_background"
            android:contentDescription="@string/timer_delete"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="8dip"
        android:background="#28ffffff" />
    <include layout="@layout/three_keys_view"
        android:id="@+id/first" />

    <include layout="@layout/three_keys_view"
        android:id="@+id/second"/>

    <include layout="@layout/three_keys_view"
        android:id="@+id/third"/>

    <include layout="@layout/three_keys_view"
        android:id="@+id/fourth" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="16dip" />
</LinearLayout>
