<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2012 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/labelBox"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textCapSentences"
        android:padding="8dp"
        android:selectAllOnFocus="true"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_width="match_parent"/>

    <View
        android:id="@+id/hairline"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_below="@id/labelBox"
        android:background="#28ffffff"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/hairline">
        <Button
            android:id="@+id/cancelButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/dialog_button"
            android:background="@drawable/item_background"
            android:text="@string/time_picker_cancel"
            />
        <View
            android:layout_height="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:layout_width="1dip"
            android:background="#28ffffff"/>
        <Button
            android:id="@+id/setButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/dialog_button"
            android:background="@drawable/item_background"
            android:text="@string/time_picker_set"/>
    </LinearLayout>
</RelativeLayout>
